add, edit and organization is woring good.

--- a/app/templates/settings_organization.html
+++ b/app/templates/settings_organization.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block content %}
 
-        <style>
-    .nav-link.active {
-        color: #e64758 !important;
-    }
+    <style>
+        .nav-link.active {
+            color: #e64758 !important;
+        }
     </style>
 
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded nav-tabs" role="tablist">
@@ -16,8 +16,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item" >
-                    <a class="nav-link active" href="#inner_organization" role="tab" data-toggle="tab">Organization<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link inner_org" href="#inner_organization" role="tab"
+                       data-toggle="tab">Organization<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#inner_client_details" role="tab" data-toggle="tab">Client Details</a>
@@ -38,7 +40,98 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane fade in active" id="inner_organization">
-            Organization Here
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="{% url 'organization_add' %}" class="btn btn-default"> <i
+                            class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
+                </div>
+
+
+                <div class="col-lg-12">
+                    <table class="table">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>Org_id</th>
+                            <th>Category</th>
+                            <th>Description</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Active</th>
+                            <th>Edit</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for org in organizations %}
+                            <tr>
+                                <td>{{ org.id }}</td>
+                                <td>{{ org.org_id }}</td>
+                                <td>{{ org.get_category_display }}</td>
+                                <td>{{ org.description }}</td>
+                                <td>{{ org.mt_city }}</td>
+                                <td>{{ org.mt_state }}</td>
+                                <td> {% if org.active %}  <i class="fa fa-check" style="color: green"></i>
+                                {% else %} <i class="fa fa-times" style="color: red"></i>{% endif %}</td>
+                                <td>
+                                    <a href="{% url 'organization_edit' org.id %}"><i class="fa fa-edit"></i></a>
+                                </td>
+                            </tr>
+
+                        {% endfor %}
+
+                        {% for group in groups %}
+                            <tr>
+                                <td>{{ group.id }}</td>
+                                <td scope="row">
+                                    {{ group.user_group.user_type }}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.receiving %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.shipping %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.mobile %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.inventory %}
+
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.items %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.reports %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.organization %}
+                                </td>
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.security %}
+                                </td>
+
+                                <td>
+                                    {% include "settings_security_usergroup_style.html" with tab_value=group.client %}
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#exampleModal_{{ group.id }}">
+                                        Edit
+                                    </button>
+                                </td>
+
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+
+                </div>
+
+            </div>
+
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
@@ -59,5 +152,11 @@
 
         </div>
     </div>
+
+    <script>
+        $(document).ready(function () {
+            $('.inner_org').click();
+        });
+    </script>
 
 {% endblock content %}
