--- a/app/templates/settings_organization_carrier_add_edit.html
+++ b/app/templates/settings_organization_carrier_add_edit.html
@@ -5,10 +5,10 @@
     <div class="row">
 
         <div class="col-lg-12">
-            <form role="form" method="post" {% if add %}action="{% url 'organization_charge_add' %}"{% endif %}>
+            <form role="form" method="post" {% if add %}action="{% url 'organization_carrier_add' %}"{% endif %}>
                 {% csrf_token %}
                 <div class="login-form">
-                    <h2 class="heading">Organization Client Charge</h2>
+                    <h2 class="heading">Organization Carrier</h2>
                     {% bootstrap_form form %}
                     {% buttons %}
                         <button type="submit" class="btn btn-success">Submit <span
