--- a/app/templates/settings_organization_carrier_tab.html
+++ b/app/templates/settings_organization_carrier_tab.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <a href="{% url 'organization_charge_add' %}" class="btn btn-default"> <i
+        <a href="{% url 'organization_carrier_add' %}" class="btn btn-default"> <i
                 class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
     </div>
 
@@ -10,24 +10,18 @@
             <tr>
                 <th>#</th>
                 <th>Client</th>
-                <th>Charge Code</th>
-                <th>Description</th>
-                <th>Rate Per</th>
-                <th>Rate</th>
+                <th>Carrier Type</th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            {% for org in organizations_charge %}
+            {% for org in organizations_carrier %}
                 <tr>
                     <td>{{ org.id }}</td>
                     <td>{{ org.organization }}</td>
-                    <td>{{ org.get_charge_code_display }}</td>
-                    <td>{{ org.get_description_display }}</td>
-                    <td>{{ org.get_rate_per_display }}</td>
-                    <td>${{ org.rate }}</td>
+                    <td>{{ org.get_carrier_type_display }}</td>
                     <td>
-                        <a href="{% url 'organization_charge_edit' org.id %}"><i class="fa fa-edit"></i></a>
+                        <a href="{% url 'organization_carrier_edit' org.id %}"><i class="fa fa-edit"></i></a>
                     </td>
 
                 </tr>
