--- a/app/templates/settings_organization_add_edit.html
+++ b/app/templates/settings_organization_add_edit.html
@@ -9,7 +9,32 @@
                 {% csrf_token %}
                 <div class="login-form">
                     <h2 class="heading">Add Organization</h2>
-                    {% bootstrap_form form %}
+                    {% bootstrap_form_errors form layout='inline' %}
+                    {% for field in form %}
+                        {% if field.name == 'st_city ' or  field.name == 'st_state' or field.name == 'st_zip' or field.name == 'mt_city ' or  field.name == 'mt_state' or field.name == 'mt_zip' %}
+                        {% else %}
+                            {% bootstrap_field field form_group_class='col-md-12 form-group label-floating' layout='inline' %}
+                        {% endif %}
+                    {% endfor %}
+
+                    <div class="form-inline">
+                        {% for field in form %}
+                            {% if field.name == 'st_city' or  field.name == 'st_state' or field.name == 'st_zip' %}
+                                {% bootstrap_field field form_group_class='col-sm-4 label-floating' layout='inline' %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <br/>
+                    <div class="form-inline">
+                        {% for field in form %}
+                            {% if field.name == 'mt_city' or  field.name == 'mt_state' or field.name == 'mt_zip' %}
+                                {% bootstrap_field field form_group_class='col-sm-4 label-floating' layout='inline' %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+
+
+                    <br/>
                     {% buttons %}
                         <button type="submit" class="btn btn-success">Submit <span
                                 class="glyphicon glyphicon-log-in"></span></button>
