--- a/app/templates/settings_organization_tab.html
+++ b/app/templates/settings_organization_tab.html
@@ -1,4 +1,30 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/searchbar.css' %}">
 <div class="row">
+
+
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-12'>
+      <h4>Search</h4>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-md-6'>
+{#      <div class='search-box'>#}
+        <form class='search-form' method="post">
+            {% csrf_token %}
+          <input class='form-control' placeholder='Description/Name' name="search" {% if search %}value="{{ search }}"{% endif %}>
+          <button class='btn btn-link search-btn'>
+            <i class='glyphicon glyphicon-search'></i>
+          </button>
+        </form>
+{#      </div>#}
+    </div>
+  </div>
+</div>
+
+
     <div class="col-lg-12">
         <a href="{% url 'organization_add' %}" class="btn btn-default"> <i
                 class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
