--- a/app/templates/settings_organization.html
+++ b/app/templates/settings_organization.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link inner_org" href="#inner_organization" role="tab"
+                    <a class="nav-link" href="#inner_organization" role="tab"
                        data-toggle="tab">Organization<span
                             class="sr-only">(current)</span></a>
                 </li>
@@ -25,7 +25,7 @@
                     <a class="nav-link inner_client" href="#inner_client_details" role="tab" data-toggle="tab">Client Details</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#inner_customer_details" role="tab" data-toggle="tab">Customer Details</a>
+                    <a class="nav-link inner_org" href="#inner_customer_details" role="tab" data-toggle="tab">Customer Details</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link inner_carrier" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier Details</a>
@@ -41,7 +41,7 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane fade in active" id="inner_organization">
 
-            {% include "settings_organization_tab.html" with organizations=organizations %}
+            {% include "settings_organization_tab.html" with organizations=organizations filter=False %}
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
