--- a/app/templates/settings_organization_tab.html
+++ b/app/templates/settings_organization_tab.html
@@ -11,7 +11,6 @@
   </div>
   <div class='row'>
     <div class='col-md-6'>
-{#      <div class='search-box'>#}
         <form class='search-form' method="post">
             {% csrf_token %}
           <input class='form-control' placeholder='Description/Name' name="search" {% if search %}value="{{ search }}"{% endif %}>
@@ -19,16 +18,17 @@
             <i class='glyphicon glyphicon-search'></i>
           </button>
         </form>
-{#      </div>#}
     </div>
   </div>
 </div>
 
-
+{% if filter != False %}
     <div class="col-lg-12">
         <a href="{% url 'organization_add' %}" class="btn btn-default"> <i
                 class="fa fa-user-plus" style="font-size: x-large;color: black;"></i></a>
     </div>
+{% endif %}
+
 
     <div class="col-lg-12">
         <table class="table">
