--- a/app/templates/settings_organization.html
+++ b/app/templates/settings_organization.html
@@ -17,19 +17,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#inner_organization" role="tab"
+                    <a class="nav-link inner_org" href="#inner_organization" role="tab"
                        data-toggle="tab">Organization<span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link inner_client" href="#inner_client_details" role="tab" data-toggle="tab">Client Details</a>
+                    <a class="nav-link inner_client" href="#inner_client_details" role="tab" data-toggle="tab">Client
+                        Details</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link inner_org" href="#inner_customer_details" role="tab" data-toggle="tab">Customer Details</a>
+                    <a class="nav-link inner_customer" href="#inner_customer_details" role="tab" data-toggle="tab">Customer
+                        Details</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link inner_carrier" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier Details</a>
+                    <a class="nav-link inner_carrier" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link inner_invoice" href="#inner_client_charges" role="tab" data-toggle="tab">Invoice</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link inner_carrier_detail" href="#inner_carrier_detail" role="tab" data-toggle="tab">Carrier Details</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#inner_vendor_details" role="tab" data-toggle="tab">Vendor Details</a>
                 </li>
@@ -45,20 +54,29 @@
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
-            {% include "settings_organization_client_tab.html" with organizations_charge=organizations_charge %}
+
+            {% include "settings_organization_tab.html" with organizations=organizations filter=1 %}
+            {#            {% include "settings_organization_client_tab.html" with organizations_charge=organizations_charge %}#}
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_customer_details">
             {% include "settings_organization_tab.html" with organizations=organizations filter=2 %}
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_carrier_details">
-            {% include "settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
+            {% include "settings_organization_tab.html" with organizations=organizations filter=3 %}
+
 
         </div>
 
+        <div role="tabpanel" class="tab-pane fade" id="inner_client_charges">
+            {% include "settings_organization_client_tab.html" with organizations_charge=organizations_charge %}
+        </div>
+
+        <div role="tabpanel" class="tab-pane fade" id="inner_carrier_detail">
+            {% include "settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
+        </div>
         <div role="tabpanel" class="tab-pane fade" id="inner_vendor_details">
             Vendor Details Here
-
         </div>
     </div>
 
@@ -66,11 +84,21 @@
         $(document).ready(function () {
             if ('{{ next_tab }}' == 'org') {
                 $('.inner_org').click();
-            } else if ('{{ next_tab }}' == 'client') {
+            }
+            else if ('{{ next_tab }}' == 'customer') {
+                $('.inner_customer').click();
+            }
+            else if ('{{ next_tab }}' == 'client') {
                 $('.inner_client').click();
             }
             else if ('{{ next_tab }}' == 'carrier') {
                 $('.inner_carrier').click();
+            }
+            else if ('{{ next_tab }}' == 'carrier_details') {
+                $('.inner_carrier_detail').click();
+            }
+            else if ('{{ next_tab }}' == 'invoice') {
+                $('.inner_invoice').click();
             }
 
 
