--- a/app/templates/settings_organization_carrier_add_edit.html
+++ b/app/templates/settings_organization_carrier_add_edit.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load startswith %}
 {% block content %}
     {% load bootstrap3 %}
     <div class="row">
@@ -9,7 +10,32 @@
                 {% csrf_token %}
                 <div class="login-form">
                     <h2 class="heading">Organization Carrier</h2>
-                    {% bootstrap_form form %}
+                    <div class="row">
+                        <div class="col-md-12">
+                            {% for field in form %}
+                                {% if field.name == "organization" or field.name == "carrier_type" or field.name == "carrier_scac"  %}
+                                    {% bootstrap_field field form_group_class='col-md-12 form-group label-floating' layout='inline' %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+
+
+                        <div class="col-md-6">
+                            {% for field in form %}
+                                {% if field.name|startswith:'domestic' %}
+                                    {% bootstrap_field field form_group_class='col-md-12 form-group label-floating' layout='inline' %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <div class="col-md-6">
+                            {% for field in form %}
+                                {% if field.name|startswith:'intl' %}
+                                    {% bootstrap_field field form_group_class='col-md-12 form-group label-floating' layout='inline' %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+
                     {% buttons %}
                         <button type="submit" class="btn btn-success">Submit <span
                                 class="glyphicon glyphicon-log-in"></span></button>
