--- a/app/templates/organization_carrier_details.html
+++ b/app/templates/organization_carrier_details.html
@@ -19,26 +19,33 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link inner_customer" href="#inner_customer_details" role="tab" data-toggle="tab">Customer</a>
+                    <a class="nav-link inner_carrier" href="{% url 'organization_carrier' %}" role="tab"
+                       >Carrier</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link inner_carrier_details" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier
+                        Details</a>
+                </li>
+
             </ul>
         </div>
     </nav>
 
     <!-- Tab panes -->
     <div class="tab-content">
-
-        <div role="tabpanel" class="tab-pane fade" id="inner_customer_details">
-            {% include "settings_organization_tab.html" with organizations=organizations filter=2 %}
-
+        <div role="tabpanel" class="tab-pane fade" id="inner_carrier">
+            {% include "settings_organization_tab.html" with organizations=organizations filter=3 %}
         </div>
+
+        <div role="tabpanel" class="tab-pane fade" id="inner_carrier_details">
+            {% include "settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
+        </div>
+
     </div>
 
     <script>
         $(document).ready(function () {
-
-            $('.inner_customer').click();
-
+            $('.inner_carrier_details').click();
         });
     </script>
 
