Update code structure

--- a/app/templates/organization/organization_client.html
+++ b/app/templates/organization/organization_client.html
@@ -17,10 +17,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
 
+                <li class="nav-item">
+                    <a class="nav-link inner_client" href="#inner_client_details" role="tab" data-toggle="tab">Client
+                        Details<span
+                                class="sr-only">(current)</span></a>
+                </li>
 
                 <li class="nav-item">
-                    <a class="nav-link inner_customer" href="#inner_customer_details" role="tab" data-toggle="tab">Customer</a>
+                    <a class="nav-link inner_invoice" href="{% url 'organization_client_invoices' %}" role="tab"
+                       >Invoice</a>
                 </li>
+
             </ul>
         </div>
     </nav>
@@ -28,17 +35,18 @@
     <!-- Tab panes -->
     <div class="tab-content">
 
-        <div role="tabpanel" class="tab-pane fade" id="inner_customer_details">
-            {% include "settings_organization_tab.html" with organizations=organizations filter=2 %}
-
+        <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
+            {% include "organization/settings_organization_tab.html" with organizations=organizations filter=1 %}
         </div>
+
+        <div role="tabpanel" class="tab-pane fade" id="inner_client_charges">
+        </div>
+
     </div>
 
     <script>
         $(document).ready(function () {
-
-            $('.inner_customer').click();
-
+            $('.inner_client').click();
         });
     </script>
 
