--- a/app/templates/organization/organization_carrier.html
+++ b/app/templates/organization/organization_carrier.html
@@ -19,11 +19,11 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link inner_carrier" href="{% url 'organization_carrier' %}" role="tab"
-                       >Carrier</a>
+                    <a class="nav-link inner_carrier" href="#inner_carrier" role="tab"
+                       data-toggle="tab">Carrier</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link inner_carrier_details" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier
+                    <a class="nav-link inner_carrier_details" href="{% url 'organization_carrier_details' %}" role="tab" >Carrier
                         Details</a>
                 </li>
 
@@ -34,18 +34,17 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane fade" id="inner_carrier">
-            {% include "settings_organization_tab.html" with organizations=organizations filter=3 %}
+            {% include "organization/settings_organization_tab.html" with organizations=organizations filter=3 %}
         </div>
 
         <div role="tabpanel" class="tab-pane fade" id="inner_carrier_details">
-            {% include "settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
         </div>
 
     </div>
 
     <script>
         $(document).ready(function () {
-            $('.inner_carrier_details').click();
+            $('.inner_carrier').click();
         });
     </script>
 
