--- a/app/templates/organization/organization_carrier_details.html
+++ b/app/templates/organization/organization_carrier_details.html
@@ -17,15 +17,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
 
-                <li class="nav-item">
-                    <a class="nav-link inner_client" href="#inner_client_details" role="tab" data-toggle="tab">Client
-                        Details<span
-                                class="sr-only">(current)</span></a>
-                </li>
 
                 <li class="nav-item">
-                    <a class="nav-link inner_invoice" href="{% url 'organization_client_invoices' %}" role="tab"
-                       >Invoice</a>
+                    <a class="nav-link inner_carrier" href="{% url 'organization_carrier' %}" role="tab"
+                       >Carrier</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link inner_carrier_details" href="#inner_carrier_details" role="tab" data-toggle="tab">Carrier
+                        Details</a>
                 </li>
 
             </ul>
@@ -35,19 +34,15 @@
     <!-- Tab panes -->
     <div class="tab-content">
 
-        <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
-            {% include "settings_organization_tab.html" with organizations=organizations filter=1 %}
-        </div>
-
-        <div role="tabpanel" class="tab-pane fade" id="inner_client_charges">
-            {% include "settings_organization_client_tab.html" with organizations_charge=organizations_charge %}
+        <div role="tabpanel" class="tab-pane fade" id="inner_carrier_details">
+            {% include "organization/settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
         </div>
 
     </div>
 
     <script>
         $(document).ready(function () {
-            $('.inner_client').click();
+            $('.inner_carrier_details').click();
         });
     </script>
 
