--- a/app/templates/organization/organization_client_invoice.html
+++ b/app/templates/organization/organization_client_invoice.html
@@ -17,14 +17,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
 
+                <li class="nav-item">
+                    <a class="nav-link inner_client" href="{% url 'organization_client' %}" role="tab" >Client
+                        Details<span
+                                class="sr-only">(current)</span></a>
+                </li>
 
                 <li class="nav-item">
-                    <a class="nav-link inner_carrier" href="#inner_carrier" role="tab"
-                       data-toggle="tab">Carrier</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link inner_carrier_details" href="{% url 'organization_carrier_details' %}" role="tab" >Carrier
-                        Details</a>
+                    <a class="nav-link inner_invoice" href="#inner_client_charges" role="tab"
+                       data-toggle="tab">Invoice</a>
                 </li>
 
             </ul>
@@ -33,19 +34,19 @@
 
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane fade" id="inner_carrier">
-            {% include "settings_organization_tab.html" with organizations=organizations filter=3 %}
+
+        <div role="tabpanel" class="tab-pane fade" id="inner_client_details">
         </div>
 
-        <div role="tabpanel" class="tab-pane fade" id="inner_carrier_details">
-            {% include "settings_organization_carrier_tab.html" with organizations_carrier=organizations_carrier %}
+        <div role="tabpanel" class="tab-pane fade" id="inner_client_charges">
+            {% include "organization/settings_organization_client_tab.html" with organizations_charge=organizations_charge %}
         </div>
 
     </div>
 
     <script>
         $(document).ready(function () {
-            $('.inner_carrier').click();
+            $('.inner_invoice').click();
         });
     </script>
 
